Refs #143927 - Fix col spacing.

--- a/src/less/public.less
+++ b/src/less/public.less
@@ -189,7 +189,7 @@ body.searchlib-page {
         }
 
         div.col-right {
-          padding: 0px 1.5em 0px 1.5em;
+          padding: 0px 0px 0px 1.5em;
 
           .sui-facet {
             font-family: @wm-ff2 !important;
